--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         border-radius: 5px;
         border: 3px solid #ee5923;
         overflow: hidden;
+        box-shadow: 0 2px 10px rgba(0,0,0,.15);
     }
     section.covid-19 .list h3{
         font-weight: 600;
